--- a/jito_searcher_client/pyproject.toml
+++ b/jito_searcher_client/pyproject.toml
@@ -20,7 +20,7 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry-grpc-plugin]
-proto_path = "mev-protos"
+proto_path = "../mev-protos"
 python_out = "./jito_searcher_client/generated"
 
 [tool.black]
