--- a/jito_geyser/pyproject.toml
+++ b/jito_geyser/pyproject.toml
@@ -24,7 +24,8 @@ python_out = "./jito_geyser/generated"
 line-length = 120
 target-version = ['py37']
 include = '\.pyi?$'
+extend-exclude = '''generated'''
 
 [tool.isort]
 profile = "black"
-extend_skip_glob = ["jito_searcher_client/generated/*"]
+extend_skip_glob = ["jito_geyser/generated/*"]
