--- a/jito_searcher_client/pyproject.toml
+++ b/jito_searcher_client/pyproject.toml
@@ -10,9 +10,8 @@ packages = [{ include = "jito_searcher_client" }]
 python = "^3.10"
 grpcio = "^1.51.1"
 protobuf = "^4.21.12"
-solders = "^0.14.2"
 click = "^8.1.3"
-solana = "^0.29.0"
+solana = "0.30.1"
 isort = "^5.11.4"
 
 [build-system]
