--- a/jito_searcher_client/pyproject.toml
+++ b/jito_searcher_client/pyproject.toml
@@ -8,8 +8,8 @@ packages = [{ include = "jito_searcher_client" }]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-grpcio = "^1.51.1"
-protobuf = "^4.21.12"
+grpcio = "1.51.1"
+protobuf = "4.21.12"
 click = "^8.1.3"
 solana = "0.30.1"
 
