--- a/jito_searcher_client/pyproject.toml
+++ b/jito_searcher_client/pyproject.toml
@@ -8,12 +8,10 @@ packages = [{ include = "jito_searcher_client" }]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-grpcio = "^1.51.1"
-protobuf = "^4.21.12"
-solders = "^0.14.2"
+grpcio = "^1.62.1"
+protobuf = "^4.25.3"
 click = "^8.1.3"
-solana = "^0.29.0"
-isort = "^5.11.4"
+solana = "0.30.1"
 
 [build-system]
 requires = ["poetry-core"]
