Update link to discord for triage purposes

--- a/jito_geyser/pyproject.toml
+++ b/jito_geyser/pyproject.toml
@@ -2,7 +2,7 @@
 name = "jito_geyser"
 version = "0.1.0"
 description = "Jito Labs Geyser Client"
-authors = ["Jito Labs <support@jito.wtf>"]
+authors = ["Jito Labs <https://discord.gg/jito>"]
 readme = "README.md"
 packages = [{ include = "jito_geyser" }]
 
