--- a/.github/workflows/ci-pip.yml
+++ b/.github/workflows/ci-pip.yml
@@ -1,33 +1,46 @@
-# .github/workflows/ci-pip.yml
+name: Publish Python Package
+
+on:
+  push:
+    tags:
+      - 'v*'
+
 jobs:
-  pypi-publish:
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
-    name: Upload release to PyPI
+  deploy:
     runs-on: ubuntu-latest
-    environment:
-      name: pypi
-      url: https://pypi.org/p/<your-pypi-project-name>
+    environment: PyPi
     permissions:
       id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
+
+    defaults:
+      run:
+        working-directory: ./jito_searcher_client
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
-        python-version: '3.11'
-
+        python-version: '3.x'
+    
+    - name: Install Poetry
+      uses: snok/install-poetry@v1
+      with:
+        version: latest
+        virtualenvs-create: true
+        virtualenvs-in-project: true
+    
     - name: Install dependencies
-      run: pip install --upgrade setuptools wheel twine
-
-    - name: Build the package
       run: |
-        cd jito_searcher_client
-        python setup.py sdist bdist_wheel
-
-    - name: Publish package to TestPyPI
-      run: twine upload --repository-url https://test.pypi.org/legacy/ dist/*
-
-    - name: Publish package to PyPI
-      run: twine upload dist/*
+        poetry install --no-interaction
+    
+    - name: Build package
+      run: |
+        poetry build
+    
+    - name: Publish package
+      uses: pypa/gh-action-pypi-publish@v1.8.10
+      with:
+        password: ${{ secrets.PYPITOKEN }}
+        packages-dir: jito_searcher_client/dist/
