--- a/jito_searcher_client/pyproject.toml
+++ b/jito_searcher_client/pyproject.toml
@@ -2,7 +2,8 @@
 name = "jito_searcher_client"
 version = "0.1.5"
 description = "Jito Labs Python Searcher Client"
-authors = ["Jito Labs <https://discord.gg/jito>"]
+authors = ["Jito Labs <noreply@jito.wtf>"]
+urls = { "Support" = "https://discord.gg/jito" }
 readme = "README.md"
 packages = [{ include = "jito_searcher_client" }]
 
