--- a/jito_searcher_client/pyproject.toml
+++ b/jito_searcher_client/pyproject.toml
@@ -15,8 +15,8 @@ click = "^8.1.3"
 solana = "0.34.0"
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["setuptools>=61.0", "wheel"]
+build-backend = "setuptools.build_meta"
 
 [tool.poetry-grpc-plugin]
 proto_path = "../mev-protos"
