--- a/.github/workflows/ci-pip.yml
+++ b/.github/workflows/ci-pip.yml
@@ -18,6 +18,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      with:
+        submodules: 'recursive' 
     
     - name: Set up Python
       uses: actions/setup-python@v4
