--- a/.github/workflows/ci-pip.yml
+++ b/.github/workflows/ci-pip.yml
@@ -45,4 +45,4 @@ jobs:
       uses: pypa/gh-action-pypi-publish@v1.8.10
       with:
         password: ${{ secrets.PYPITOKEN }}
-        packages-dir: jito_searcher_client/dist/
+        packages-dir: dist/
